<resources>
    <string name="app_name">You Can Cook!</string>
    <string name="welcome">Welcome! Take this fun quiz to check your knowledge on cooking!</string>
    <string name="your_name">Your Name</string>
    <string name="your_dish">Your Favorite Dish</string>
    <string name="question_1">1. Fry food lightly then stew it in a closed container is what method in cooking:</string>
    <string name="answer_1a">Basting</string>
    <string name="answer_1b">Frying</string>
    <string name="answer_1c">Sauteing</string>
    <string name="answer_1d">Braising</string>
    <string name="question_2">2. To cook food in oil or fat is called</string>
    <string name="answer_2a">Braising</string>
    <string name="answer_2b">Frying</string>
    <string name="answer_2c">Simmering</string>
    <string name="answer_2d">Blanching</string>
    <string name="question_3">3. What is the safe internal temperature for cooked chicken?</string>
    <string name="answer_3a">82 degrees</string>
    <string name="answer_3b">132 degrees</string>
    <string name="answer_3c">165 degrees</string>
    <string name="answer_3d">102 degrees</string>
    <string name="question_4">4. Blanch means</string>
    <string name="answer_4a">Boil food for an extended amount of time</string>
    <string name="answer_4b">Boil food for a minimal amount of time</string>
    <string name="answer_4c">Cook food in a deep pot</string>
    <string name="answer_4d">Place hot food into an ice bath</string>
    <string name="question_5">5. Cook pasta to al dente, what does this mean?</string>
    <string name="answer_5a">Place pasta in a frying pan</string>
    <string name="answer_5b">Add salt to your pasta when cooking</string>
    <string name="answer_5c">Cook pasta until just tender</string>
    <string name="answer_5d">Cook pasta until firm to the bite</string>
    <string name="question_6">6. Which of the following are French Mother Sauces (Multiple Choice)</string>
    <string name="answer_6a">Allemande</string>
    <string name="answer_6b">Bouillabaisse</string>
    <string name="answer_6c">Veloute</string>
    <string name="question_7">7a When following a recipe, what is the first thing to do</string>
    <string name="answer_7a">Gather all ingredients</string>
    <string name="answer_7b">Read through the recipe</string>
    <string name="answer_7c">Clean your kitchen to allow space to cook</string>
    <string name="answer_7d">Get some help from a friend or partner</string>
    <string name="question_8">8. Searing means</string>
    <string name="answer_8a">Cook on high heat until food is caramelized</string>
    <string name="answer_8b">Roast in a pan until juices run clear</string>
    <string name="answer_8c">Grill until you have uniform grill marks</string>
    <string name="answer_8d">Cook in 1 to 2 tablespoons of oil</string>
    <string name="question_9">9. What is the required ingredient for an aioli?</string>
    <string name="answer_9a">Garlic</string>
    <string name="answer_9b">Onion</string>
    <string name="answer_9c">Oil</string>
    <string name="answer_9d">Mayonnaise</string>
    <string name="submit">Submit Your Answers</string>

</resources>
